github/ci/prow-deploy/kustom/base/manifests/local/nginx-ingress.yaml
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deck
  namespace: default
spec:
  ingressClassName: public-iks-k8s-nginx
  tls:
  - hosts:
    - prow.ci.kubevirt.io
  rules:
  - host: prow.ci.kubevirt.io
    http:
      paths:
      - path: /hook
        pathType: Prefix
        backend:
          service:
            name: hook
            port:
              number: 8888
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deck
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcsweb
  namespace: default
spec:
  ingressClassName: public-iks-k8s-nginx
  tls:
  - hosts:
    - gcsweb.ci.kubevirt.io
  rules:
  - host: gcsweb.ci.kubevirt.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gcsweb
            port:
              number: 80
